v5 MultiValueMap with immutable List.of()